[Helmi] merapihkan struktur folder

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,4 +1,322 @@
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap");
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css");
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
+html::-webkit-scrollbar {
+  display: none;
+}
+
+.jumbotron {
+  margin-top: -22px;
+  width: 100%;
+  min-height: 400px;
+  position: relative;
+}
+
+.jumbotron .jumbotron__overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.45);
+  top: 0;
+  left: 0;
+  z-index: 2;
+}
+
+.jumbotron .jumbotron__background {
+  max-width: 1500px;
+  height: 520px;
+  position: relative;
+}
+
+.jumbotron .jumbotron__background img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.jumbotron .jumbotron__content {
+  position: absolute;
+  top: 35%;
+  left: 10%;
+  width: 80%;
+  text-align: center;
+  z-index: 3;
+}
+
+.jumbotron .jumbotron__content h2 {
+  color: #FFF;
+  font-size: 32px;
+  font-family: "Playfair Display",sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 1rem;
+  margin-bottom: 20px;
+}
+
+.jumbotron .jumbotron__content p {
+  color: #885A89;
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+
+.jumbotron .jumbotron__content .jumbotron__button .primary__button {
+  background-color: #EF7B39;
+  color: #FFF;
+  font-weight: bold;
+  font-size: 14px;
+  border-radius: 7px;
+  padding: 10px 20px;
+  margin-right: 20px;
+}
+
+.jumbotron .jumbotron__content .jumbotron__button .secondary__button {
+  background-color: transparent;
+  border: 2px solid #FFF;
+  color: #FFF;
+  font-size: 14px;
+  border-radius: 7px;
+  padding: 10px 20px;
+  font-weight: bold;
+}
+
+.jumbotron__studentEnrollment {
+  background: #E8E8E8;
+}
+
+.jumbotron__studentEnrollment .row > * {
+  padding: 0;
+}
+
+.jumbotron__studentEnrollment .jumbotron__breadcrumb, .jumbotron__studentEnrollment .jumbotron__preview {
+  padding: 40px 50px;
+}
+
+.jumbotron__studentEnrollment .jumbotron__preview h2 {
+  color: #885A89;
+  font-size: 40px;
+  font-weight: 500;
+}
+
+.jumbotron__studentEnrollment .jumbotron__preview h5 {
+  font-size: 18px;
+}
+
+.jumbotron__studentEnrollment .jumbotron__preview p {
+  font-size: 15px;
+  text-align: justify;
+}
+
+.jumbotron__studentEnrollment .jumbotron__image-preview {
+  background: ivory;
+  -webkit-clip-path: polygon(0% 100%, 97% 100%, 100% 0%, 26% 0, 0 78%);
+          clip-path: polygon(0% 100%, 97% 100%, 100% 0%, 26% 0, 0 78%);
+  height: 100%;
+}
+
+.jumbotron__studentEnrollment .jumbotron__image-preview .jumbotron__boxImg {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  z-index: 1;
+  background-color: #E8E8E8;
+}
+
+.jumbotron__studentEnrollment .jumbotron__image-preview .jumbotron__boxImg img {
+  width: inherit;
+  height: inherit;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+@media (max-width: 576px) {
+  .jumbotron {
+    margin-top: -12px;
+  }
+  .jumbotron .jumbotron__content {
+    top: 20%;
+  }
+  .jumbotron .jumbotron__content h2 {
+    font-size: 28px;
+    letter-spacing: 0.5rem;
+  }
+  .jumbotron .jumbotron__content p {
+    font-size: 15px;
+    text-align: justify;
+  }
+  .jumbotron .jumbotron__content .jumbotron__button {
+    margin-top: 40px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  .jumbotron .jumbotron__content .jumbotron__button .primary__button {
+    padding: 9px;
+  }
+  .jumbotron .jumbotron__content .jumbotron__button .secondary__button {
+    padding: 9px;
+  }
+  .jumbotron__studentEnrollment .jumbotron__image-preview {
+    -webkit-clip-path: none;
+            clip-path: none;
+    height: 100%;
+  }
+}
+
+.contact__gunadarma {
+  margin-top: 20px;
+  padding: 20px;
+  background: #F4F4F4;
+}
+
+.contact__gunadarma h5 {
+  color: #885A89;
+}
+
+.contact__gunadarma .location p {
+  font-size: 13px;
+}
+
+.contact__gunadarma .location a {
+  color: #EF7B39;
+  font-size: 15px;
+}
+
+.contact__gunadarma .link .link__content ul {
+  list-style-type: square;
+}
+
+.contact__gunadarma .link .link__content ul li {
+  margin: 10px 0;
+}
+
+.contact__gunadarma .link .link__content ul li::marker {
+  color: #8AA7A2;
+}
+
+.contact__gunadarma .link .link__content ul li a {
+  text-decoration: none;
+  position: relative;
+}
+
+.contact__gunadarma .link .link__content ul li a::after {
+  content: url("./../images/icons/foreign.png");
+  width: 15px;
+  height: 15px;
+  position: absolute;
+  top: -5px;
+  margin-left: 8px;
+  -webkit-filter: invert(100);
+          filter: invert(100);
+}
+
+.contact__gunadarma .email__gundar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+}
+
+.contact__gunadarma .email__gundar .email__boxImg {
+  width: 50px;
+  height: 50px;
+  margin-right: 25px;
+}
+
+.contact__gunadarma .email__gundar .email__boxImg img {
+  width: inherit;
+  height: inherit;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.contact__gunadarma .telephone__gundar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+}
+
+.contact__gunadarma .telephone__gundar .telephone__boxImg {
+  width: 50px;
+  height: 50px;
+  margin-right: 25px;
+}
+
+.contact__gunadarma .telephone__gundar .telephone__boxImg img {
+  width: inherit;
+  height: inherit;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+@media (max-width: 992px) {
+  .contact__gunadarma {
+    margin-top: 20px;
+    padding: 20px;
+    background: #F4F4F4;
+  }
+  .contact__gunadarma h5 {
+    color: #885A89;
+  }
+  .contact__gunadarma .location p {
+    font-size: 13px;
+  }
+  .contact__gunadarma .location a {
+    color: #EF7B39;
+    font-size: 15px;
+  }
+  .contact__gunadarma .link {
+    margin: 20px;
+  }
+}
+
+.icons {
+  background: #F4F4F4;
+  padding: 40px;
+}
+
+.icons .icons__header {
+  text-align: center;
+  margin-bottom: 32px;
+}
+
+.icons .container {
+  padding: 0;
+}
+
+.icons .container .gunadarma__icon {
+  text-align: center;
+}
+
+.icons .container .gunadarma__icon .content {
+  text-align: justify;
+}
+
+.icons .container .gunadarma__icon .content p:nth-child(1) {
+  color: #885A89;
+  font-size: 18px;
+  text-align: center;
+}
+
+.icons .container .gunadarma__icon .content p:nth-child(2) {
+  font-weight: lighter;
+  font-size: 16px;
+}
+
 header .info-gundar {
   background: #885A89;
   padding: 22px 80px 22px 0;
@@ -432,163 +750,18 @@ header .sidebar .sidebar__right {
   }
 }
 
-.jumbotron {
-  margin-top: -22px;
-  width: 100%;
-  min-height: 400px;
-  position: relative;
-}
-
-.jumbotron .jumbotron__overlay {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  background-color: rgba(0, 0, 0, 0.45);
-  top: 0;
-  left: 0;
-  z-index: 2;
-}
-
-.jumbotron .jumbotron__background {
-  max-width: 1500px;
-  height: 520px;
-  position: relative;
-}
-
-.jumbotron .jumbotron__background img {
-  -o-object-fit: cover;
-     object-fit: cover;
-  width: 100%;
-  height: 100%;
-}
-
-.jumbotron .jumbotron__content {
-  position: absolute;
-  top: 35%;
-  left: 10%;
-  width: 80%;
+footer {
+  padding: 15px;
+  background: #885A89;
+  color: #FFF;
   text-align: center;
-  z-index: 3;
-}
-
-.jumbotron .jumbotron__content h2 {
-  color: #FFF;
-  font-size: 32px;
-  font-family: "Playfair Display",sans-serif;
-  text-transform: uppercase;
-  letter-spacing: 1rem;
-  margin-bottom: 20px;
-}
-
-.jumbotron .jumbotron__content p {
-  color: #885A89;
-  font-size: 18px;
-  font-weight: 600;
-  margin-bottom: 20px;
-}
-
-.jumbotron .jumbotron__content .jumbotron__button .primary__button {
-  background-color: #EF7B39;
-  color: #FFF;
   font-weight: bold;
-  font-size: 14px;
-  border-radius: 7px;
-  padding: 10px 20px;
-  margin-right: 20px;
-}
-
-.jumbotron .jumbotron__content .jumbotron__button .secondary__button {
-  background-color: transparent;
-  border: 2px solid #FFF;
-  color: #FFF;
-  font-size: 14px;
-  border-radius: 7px;
-  padding: 10px 20px;
-  font-weight: bold;
-}
-
-.jumbotron__studentEnrollment {
-  background: #E8E8E8;
-}
-
-.jumbotron__studentEnrollment .row > * {
-  padding: 0;
-}
-
-.jumbotron__studentEnrollment .jumbotron__breadcrumb, .jumbotron__studentEnrollment .jumbotron__preview {
-  padding: 40px 50px;
-}
-
-.jumbotron__studentEnrollment .jumbotron__preview h2 {
-  color: #885A89;
-  font-size: 40px;
-  font-weight: 500;
-}
-
-.jumbotron__studentEnrollment .jumbotron__preview h5 {
-  font-size: 18px;
-}
-
-.jumbotron__studentEnrollment .jumbotron__preview p {
-  font-size: 15px;
-  text-align: justify;
-}
-
-.jumbotron__studentEnrollment .jumbotron__image-preview {
-  background: ivory;
-  -webkit-clip-path: polygon(0% 100%, 97% 100%, 100% 0%, 26% 0, 0 78%);
-          clip-path: polygon(0% 100%, 97% 100%, 100% 0%, 26% 0, 0 78%);
-  height: 100%;
-}
-
-.jumbotron__studentEnrollment .jumbotron__image-preview .jumbotron__boxImg {
-  width: 100%;
-  height: 100%;
-  position: relative;
-  z-index: 1;
-  background-color: #E8E8E8;
-}
-
-.jumbotron__studentEnrollment .jumbotron__image-preview .jumbotron__boxImg img {
-  width: inherit;
-  height: inherit;
-  -o-object-fit: contain;
-     object-fit: contain;
+  font-size: 16px;
 }
 
 @media (max-width: 576px) {
-  .jumbotron {
-    margin-top: -12px;
-  }
-  .jumbotron .jumbotron__content {
-    top: 20%;
-  }
-  .jumbotron .jumbotron__content h2 {
-    font-size: 28px;
-    letter-spacing: 0.5rem;
-  }
-  .jumbotron .jumbotron__content p {
-    font-size: 15px;
-    text-align: justify;
-  }
-  .jumbotron .jumbotron__content .jumbotron__button {
-    margin-top: 40px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-  }
-  .jumbotron .jumbotron__content .jumbotron__button .primary__button {
-    padding: 9px;
-  }
-  .jumbotron .jumbotron__content .jumbotron__button .secondary__button {
-    padding: 9px;
-  }
-  .jumbotron__studentEnrollment .jumbotron__image-preview {
-    -webkit-clip-path: none;
-            clip-path: none;
-    height: 100%;
+  footer {
+    font-size: 12px;
   }
 }
 
@@ -1178,39 +1351,6 @@ section .gundarGraduates__join .join__container .container .primary__button {
   }
 }
 
-.icons {
-  background: #F4F4F4;
-  padding: 40px;
-}
-
-.icons .icons__header {
-  text-align: center;
-  margin-bottom: 32px;
-}
-
-.icons .container {
-  padding: 0;
-}
-
-.icons .container .gunadarma__icon {
-  text-align: center;
-}
-
-.icons .container .gunadarma__icon .content {
-  text-align: justify;
-}
-
-.icons .container .gunadarma__icon .content p:nth-child(1) {
-  color: #885A89;
-  font-size: 18px;
-  text-align: center;
-}
-
-.icons .container .gunadarma__icon .content p:nth-child(2) {
-  font-weight: lighter;
-  font-size: 16px;
-}
-
 .applicationManagement {
   text-align: center;
   min-height: 0;
@@ -1236,10 +1376,8 @@ section .gundarGraduates__join .join__container .container .primary__button {
 }
 
 .applicationManagement .app__header h4 {
-  font-size: 30px;
+  font-size: 20px;
   margin-bottom: 15px;
-  color: #885A89;
-  font-weight: 700;
 }
 
 .applicationManagement .app__content {
@@ -1450,27 +1588,32 @@ section .gundarGraduates__join .join__container .container .primary__button {
   font-weight: 500;
 }
 
-#startNewApp .tab-content .tab-pane .disclaimer__content ul {
-  list-style: none;
-  padding: 0;
+#startNewApp .tab-content .tab-pane .disclaimer__content .disclaimer__lists .disclaimer__list--one, #startNewApp .tab-content .tab-pane .disclaimer__content .disclaimer__lists .disclaimer__list--two {
+  padding-top: 10px;
+  padding-bottom: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
 }
 
-#startNewApp .tab-content .tab-pane .disclaimer__content ul li {
-  font-size: 16px;
+#startNewApp .tab-content .tab-pane .disclaimer__content .disclaimer__lists .disclaimer__list--one p, #startNewApp .tab-content .tab-pane .disclaimer__content .disclaimer__lists .disclaimer__list--two p {
   text-align: justify;
 }
 
-#startNewApp .tab-content .tab-pane .disclaimer__content ul li span {
-  font-weight: 600;
+#startNewApp .tab-content .tab-pane .disclaimer__content .disclaimer__lists .bi.bi-record-fill {
+  width: 20px;
+  height: 20px;
+  color: #885A89;
 }
 
-#startNewApp .tab-content .tab-pane .disclaimer__content ul li::before {
-  content: ".";
-  color: #885A89;
-  display: inline-block;
-  font-size: 100px;
-  line-height: 0px;
-  margin-right: 10px;
+#startNewApp .tab-content .tab-pane .disclaimer__content .disclaimer__list--one {
+  margin-bottom: -10px;
 }
 
 #startNewApp .tab-content .tab-pane #scholarshipHelp {
@@ -1540,150 +1683,34 @@ section .gundarGraduates__join .join__container .container .primary__button {
     content: "";
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 92.6%;
     top: 0;
     left: 0;
     background: #885A89;
     border-radius: 20px;
   }
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-}
-
-html::-webkit-scrollbar {
-  display: none;
-}
-
-.contact__gunadarma {
-  margin-top: 20px;
-  padding: 20px;
-  background: #F4F4F4;
-}
-
-.contact__gunadarma h5 {
-  color: #885A89;
-}
-
-.contact__gunadarma .location p {
-  font-size: 13px;
-}
-
-.contact__gunadarma .location a {
-  color: #EF7B39;
-  font-size: 15px;
-}
-
-.contact__gunadarma .link .link__content ul {
-  list-style-type: square;
-}
-
-.contact__gunadarma .link .link__content ul li {
-  margin: 10px 0;
-}
-
-.contact__gunadarma .link .link__content ul li::marker {
-  color: #8AA7A2;
-}
-
-.contact__gunadarma .link .link__content ul li a {
-  text-decoration: none;
-  position: relative;
-}
-
-.contact__gunadarma .link .link__content ul li a::after {
-  content: url("./../images/icons/foreign.png");
-  width: 15px;
-  height: 15px;
-  position: absolute;
-  top: -5px;
-  margin-left: 8px;
-  -webkit-filter: invert(100);
-          filter: invert(100);
-}
-
-.contact__gunadarma .email__gundar {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: stretch;
-      -ms-flex-align: stretch;
-          align-items: stretch;
-}
-
-.contact__gunadarma .email__gundar .email__boxImg {
-  width: 50px;
-  height: 50px;
-  margin-right: 25px;
-}
-
-.contact__gunadarma .email__gundar .email__boxImg img {
-  width: inherit;
-  height: inherit;
-  -o-object-fit: contain;
-     object-fit: contain;
-}
-
-.contact__gunadarma .telephone__gundar {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: stretch;
-      -ms-flex-align: stretch;
-          align-items: stretch;
-}
-
-.contact__gunadarma .telephone__gundar .telephone__boxImg {
-  width: 50px;
-  height: 50px;
-  margin-right: 25px;
-}
-
-.contact__gunadarma .telephone__gundar .telephone__boxImg img {
-  width: inherit;
-  height: inherit;
-  -o-object-fit: contain;
-     object-fit: contain;
-}
-
-@media (max-width: 992px) {
-  .contact__gunadarma {
-    margin-top: 20px;
-    padding: 20px;
+  #startNewApp .tab-content .tab-pane {
+    border-radius: 8px;
+    padding: 30px;
     background: #F4F4F4;
   }
-  .contact__gunadarma h5 {
-    color: #885A89;
+  #startNewApp .tab-content .tab-pane form label {
+    font-size: 16px;
   }
-  .contact__gunadarma .location p {
-    font-size: 13px;
+  #startNewApp .tab-content .tab-pane form label span {
+    font-weight: 600;
+    color: crimson;
   }
-  .contact__gunadarma .location a {
-    color: #EF7B39;
-    font-size: 15px;
+  #startNewApp .tab-content .tab-pane form input, #startNewApp .tab-content .tab-pane form select {
+    border: 1px solid #885A89;
+    border-radius: 6px;
   }
-  .contact__gunadarma .link {
-    margin: 20px;
+  #startNewApp .tab-content .tab-pane form input[type="file"] {
+    border: 2px solid #885A89;
+    border-radius: 10px;
   }
-}
-
-footer {
-  padding: 15px;
-  background: #885A89;
-  color: #FFF;
-  text-align: center;
-  font-weight: bold;
-  font-size: 16px;
-}
-
-@media (max-width: 576px) {
-  footer {
-    font-size: 12px;
+  #startNewApp .tab-content .tab-pane .disclaimer__content {
+    padding: 20px 0 0 0;
   }
 }
 /*# sourceMappingURL=styles.css.map */
