--- a/assets/styles/pages/_enrollment.scss
+++ b/assets/styles/pages/_enrollment.scss
@@ -1,69 +1,3 @@
-@mixin styleTitle {
-    color: $Color4;
-            font-size: 24px;
-            font-weight: bold;
-            font-family: 'Playfair Display', sans-serif;
-
-            &::after{
-                content: "";
-                display: block;
-                width: 16%;
-                margin: 20px auto;
-                border-bottom: 2px solid #E3E3E3;
-    }
-}
-
-@mixin styleSubTitle{
-    font-size: 30px;
-    margin-bottom: 15px;
-    color: $primaryColor;
-    font-weight: 700;
-}
-
-@mixin primaryButton{
-    background-color: $Color3;
-    color: $Color7;
-    font-weight: bold;
-    font-size: 14px;
-    border-radius: 7px;
-    padding: 10px 40px;
-    margin-right:20px;
-}
-
-@mixin sectionHeader {
-    margin-top: 20px;
-
-        h2{
-            @include styleTitle();
-        }
-
-        h4{
-            @include styleSubTitle();
-        }
-}
-
-@mixin progressBar($width) {
-    content: "";
-    position: absolute;
-    width: $width;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background: $primaryColor;
-    border-radius: 75px;
-}
-
-@mixin progressBarHp($height){
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: $height;
-    top: 0;
-    left: 0;
-    background: $primaryColor;
-    border-radius: 20px;
-}
-
 .applicationManagement{
     text-align: center;
     min-height: 0;
@@ -263,28 +197,56 @@
                     font-weight: 500;
                 }
 
-                ul{
-                    list-style: none;
-                    padding: 0;
+                .disclaimer__lists {
 
-                    li{
-                        font-size: 16px;
-                        text-align: justify;
+                    .disclaimer__list--one,.disclaimer__list--two{
+                        padding-top: 10px;
+                        padding-bottom: 0;
+                        display: flex;
+                        justify-content: flex-start;
+                        align-items:baseline;
 
-                        span{
-                            font-weight: 600;
-                        }
-
-                        &::before{
-                            content: ".";
-                            color: $primaryColor;
-                            display: inline-block;
-                            font-size: 100px;
-                            line-height: 0px;
-                            margin-right: 10px;
+                        p{
+                            text-align: justify
                         }
                     }
+
+                        .bi.bi-record-fill{
+                            width: 20px;
+                            height: 20px;
+                            color: $primaryColor;
+                    }
                 }
+
+                .disclaimer__list--one {
+                    margin-bottom: -10px;
+                }
+
+                // ul{
+                //     list-style: none;
+                //     padding: 0;
+
+                //     li{
+                //         font-size: 16px;
+                //         text-align: justify;
+
+                //         span{
+                //             font-weight: 600;
+                //         }
+
+                //         &::before{
+                //             content: ".";
+                //             color: $primaryColor;
+                //             display: inline-block;
+                //             font-size: 100px;
+                //             line-height: 0px;
+                //             margin-right: 10px;
+                //         }
+                //         p{
+                //             padding: 20px;
+                //         }
+                //     }
+                // }
             }
 
             #scholarshipHelp {
@@ -350,10 +312,43 @@
 
             .row.progress__step-3{
                 &::after{
-                    @include progressBarHp(100%);
+                    @include progressBarHp(92.6%);
                 }
             }
         }
 
+        .tab-content{
+            .tab-pane{
+                border-radius: 8px;
+                padding: 30px;
+                background: $Color6;
+    
+                form{
+                    label{
+                        font-size: 16px;
+        
+                        span{
+                            font-weight: 600;
+                            color: crimson;
+                        }
+                    }
+        
+                    input,select {
+                        border: 1px solid $primaryColor;
+                        border-radius: 6px;
+                    }
+        
+                    input[type="file"]{
+                        border: 2px solid $primaryColor;
+                        border-radius: 10px;
+                    }
+                }     
+    
+                .disclaimer__content{
+                    padding: 20px 0 0 0;
+                
+                }
+            }
+        }
     }
 }
