[Helmi] update short course

--- a/assets/styles/components/_customAccordion.scss
+++ b/assets/styles/components/_customAccordion.scss
@@ -13,7 +13,7 @@
 }
   
   /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-  .active__courses, .accordion:hover {
+  .active__courses, .accordion__course:hover {
     background-color: $primaryColor;
   }
   
