--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -333,7 +333,7 @@ html::-webkit-scrollbar {
 }
 
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-.active__courses, .accordion:hover {
+.active__courses, .accordion__course:hover {
   background-color: #885A89;
 }
 
