--- a/assets/styles/base/_variables.scss
+++ b/assets/styles/base/_variables.scss
@@ -10,6 +10,7 @@ $Color9: #3b3b3b;
 $Color10: #7E3485;
 $Color11: #E8E8E8;
 $Color12: #BFBFBF;
+$Color13: #000;
 
 
 $urlIcon1: "./../images/icons/ic_form.png";
