--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -15,9 +15,11 @@
 
 // Component
 @import "./components/jumbotron";
+@import "./components/button";
 @import "./components/contact";
 @import "./components/templateIcon";
 @import "./components/customAccordion";
+@import "./components/nav";
 
 // layouts
 @import "./layouts/header";
