[Helmi] update pages how to apply

--- a/assets/styles/pages/_courses.scss
+++ b/assets/styles/pages/_courses.scss
@@ -1,5 +1,5 @@
 // short courses
-.shortCourses__header,.undergraduateCourse__header{
+.shortCourses__header,.undergraduateCourse__header,.postgraduateCourse__header{
     @include sectionHeader();
 }
 
